--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -1,7 +1,7 @@
 
 @font-face {
   font-family: "Shrikhand";
-  src: url("shrikhand/Shrikhand-Regular.otf");
+  src: url("./shrikhand/Shrikhand-Regular.otf");
 }
 //Code couleur
 
