--- a/sass/style.css
+++ b/sass/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Shrikhand";
-  src: url("Shrikhand/Shrikhand-Regular.otf");
+  src: url("./shrikhand/Shrikhand-Regular.otf");
 }
 @keyframes loader {
   100% {
@@ -178,7 +178,7 @@ html {
 
 @font-face {
   font-family: "Shrikhand";
-  src: url("Shrikhand/Shrikhand-Regular.otf");
+  src: url("./shrikhand/Shrikhand-Regular.otf");
 }
 @keyframes loader {
   100% {
